ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: treeassignment-ing
  namespace: treeapp-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /tree
spec:
  rules:
    - host: local.ecosia.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: treeassignment-svc
                port:
                  number: 8000
